Super Event Remakes Completed

--- a/localisation/PB_Super_Events_l_english.yml
+++ b/localisation/PB_Super_Events_l_english.yml
@@ -4,7 +4,7 @@
 
   GFX_SPEVNT_London_Stock_Crisis:0 "THE LONDON STOCK CRISIS"
   GFX_SPEVNT_London_Stock_Crisis_TEXT:0 "In other periods of depression, it has always been possible to see some things which were solid and upon which you could base hope... but as I look around about, I now see nothing to give ground to hope.\n\n§O-John Maynard Keynes-§!"
-  SPEVNT_SCA_American_War_CLOSETEXT:0 "§OAN EMPIRE IN CRISIS?§!"
+  GFX_SPEVNT_London_Stock_Crisis_CLOSETEXT:0 "§OAN EMPIRE IN CRISIS?§!"
 
   GFX_SPEVNT_Polish_Uprising:0 "The POLISH REBELLION"
   GFX_SPEVNT_Polish_Uprising_TEXT:0 "And said Poland, "\Whoever comes to me, will be free and equal, because I am freedom."\n\n§O-The Books of the Polish Nation-§!"
@@ -29,14 +29,17 @@
   SPEVNT_Atom_Bomb_TEXT:0 "Our technical civilization has just reached its greatest level of savagery. We will have to choose, in the more or less near future, between collective suicide and the intelligent use of our scientific conquests.\n\n§O-Albert Camus-§!"
   SPEVNT_Atom_Bomb_CLOSETEXT:0 "§OA NEW HELL IS LET LOOSE§!"
 
-  SPEVNT_Second_Great_War:0 "The 2nd Great War"
-  SPEVNT_Second_Great_War_TEXT:0 "The Long Peace lies shattered, and the world is aflame. Now is the time of monsters."
+  SPEVNT_Second_Great_War:0 "THE SECOND GREAT WAR"
+  SPEVNT_Second_Great_War_TEXT:0 "Now may God bless you all, and may he defend the right. For it is evil things that we will be fighting against-brute force, bad faith, injustice, oppression and persecution-and against them I am certain that the right will prevail.\n§O-Neville Chamberlain-§!"
+  SPEVNT_Second_Great_War_CLOSETEXT:0 "§OHELL IS LET LOOSE§!"
 
-  GFX_SPEVNT_Great_Balkan_War:0 "The Great Balkan War"
-  GFX_SPEVNT_Great_Balkan_War_TEXT:0 "Blood feuds, ancient and modern, at last come to a head."
+  GFX_SPEVNT_Great_Balkan_War:0 "THE GREAT BALKAN WAR"
+  GFX_SPEVNT_Great_Balkan_War_TEXT:0 "A single spark will set off an explosion that will consume us all … I cannot tell you when that explosion will occur, but I can tell you where … Some damned foolish thing in the Balkans will set it off.\n§O-Otto von Bismarck-§!"
+  GFX_SPEVNT_Great_Balkan_War_CLOSETEXT:0 "§OA LAND UNITED IN FIRE§!"
 
-  SPEVNT_Brazil_Unification:0 "Brazil Reunited"
-  SPEVNT_Brazil_Unification_TEXT:0 "Peace in the future and glory in the past.\nA House Divided stands once more."
+  SPEVNT_Brazil_Unification:0 "BRAZILIAN REUNIFICATION"
+  SPEVNT_Brazil_Unification_TEXT:0 "Each drop of my blood will be an immortal flame in your conscience and will uphold the sacred will to resist. To hatred I reply with pardon, and to those who think they have defeated me, I reply with my victory.\n§O-Getúlio Vargas-§!"
+  SPEVNT_Brazil_Unification_CLOSETEXT:0 "§OA HOUSE DIVIDED NO LONGER§!"
 
   SPEVNT_Brazil_Unification_Republic:0 "Brazil Reunited"
   SPEVNT_Brazil_Unification_Republic_TEXT:0 "The light of democracy shines from the Andes to the Atlantic.\nA House Divided stands once more."
@@ -50,32 +53,41 @@
   SPEVNT_Brazil_Unification_Jacobin:0 "Brazil Reunited"
   SPEVNT_Brazil_Unification_Jacobin_TEXT:0 "The act of rebellion is one of the most human actions possible.\nA House Divided stands once more."
 
-  SPEVNT_Second_Great_War_LON_Victory:0 "Democracy Triumphant"
-  SPEVNT_Second_Great_War_LON_Victory_TEXT:0 "The siege of the future has faltered, and the promise of tomorrow stretches out before us."
+  SPEVNT_Second_Great_War_LON_Victory:0 "THE GREAT WAR CONCLUDES"
+  SPEVNT_Second_Great_War_LON_Victory_TEXT:0 "More than ever before in human history, we share a common destiny. We can master it only if we face it together. And that, my friends, is why we have the League of Nations.\n§O-Kofi Annan-§!"
+  SPEVNT_Second_Great_War_LON_Victory_CLOSETEXT:0 "§OGOD, KING AND COUNTRY FOR ALL§!"
 
-  SPEVNT_Second_Great_War_RP_Victory:0 "The Fall of Europe"
-  SPEVNT_Second_Great_War_RP_Victory_TEXT:0 "A dark cloud falls over the continent, the sun has fallen down, and the flags are all dead at the top of their poles."
+  SPEVNT_Second_Great_War_RP_Victory:0 "THE GREAT WAR CONCLUDES"
+  SPEVNT_Second_Great_War_RP_Victory_TEXT:0 "Vengeance is invigorating. It focuses and enlivens us, and it quashes grief because it turns the emotion outward. In grief we go to pieces. In revenge we come together as a single pointed weapon aimed at a target.\n\n§O-Siri Hustvedt-§!"
+  SPEVNT_Second_Great_War_RP_Victory_CLOSETEXT:0 "§OA CONTINENT BOUND IN STEEL§!"
 
-  SPEVNT_Russian_Civil_War:0 "The Russian Collapse"
-  SPEVNT_Russian_Civil_War_TEXT:0 "The Russian state has the advantage over the other, that it is controlled directly by God, otherwise it is impossible to understand how it exists."
+  SPEVNT_Russian_Civil_War:0 "THE RUSSIAN CIVIL WAR"
+  SPEVNT_Russian_Civil_War_TEXT:0 "I believe that you, each and all, in your place can sustain this Heaven-sent trial and that we all, beginning with myself, will fulfill our duty to the end. Great is the God of our Russian land!\n\n§O-Nicholas II-§!"
+  SPEVNT_Russian_Civil_War_CLOSETEXT:0 "§OEURASIA'S BLOODLUST TURNS INWARD§!"
 
-  SPEVNT_Anglo_American_War:0 "The Anglo-American War"
-  SPEVNT_Anglo_American_War_TEXT:0 "There will come a time of fire and night, when enemies rise and empires fall, when the stars themselves begin to die. That time is already here."
+  SPEVNT_Anglo_American_War:0 "THE IMPERIAL CIVIL WAR"
+  SPEVNT_Anglo_American_War_TEXT:0 "In this sense, empires do not fall; they rather fall apart,usually very slowly, though sometimes remarkably quickly.\n\n§O-Donald J. Puchala-§!"
+  SPEVNT_Anglo_American_War_CLOSETEXT:0 "§ODIVIDE ET IMPERA§!"
 
-  SPEVNT_American_Revolution:0 "American Revolution"
-  SPEVNT_American_Revolution_TEXT:0 "Washington's legacy shall be avenged though fire and steel, though perhaps not quite how he would have expected."
+  SPEVNT_American_Revolution:0 "THE SECOND AMERICAN REVOLUTION"
+  SPEVNT_American_Revolution_TEXT:0 "But we have a glowing dream of how fair the world will seem when each man can live his life secure and free; When the earth is owned by labor and there's joy and peace for all, in the Commonwealth of Toil that is to be.‎\n§O-Joe Glazer, Commonwealth of Toil-§!"
+  SPEVNT_American_Revolution_CLOSETEXT:0 "§OWASHINGTON'S LEGACY AVENGED§!"
 
-  SPEVNT_Mexican_Unification:0 "Mexican Unification"
-  SPEVNT_Mexican_Unification_TEXT:0 "O, Fatherland, ere your children, defenseless bend their neck beneath the yoke, may your fields be watered with blood."
+  SPEVNT_Mexican_Unification:0 "MEXICAN UNIFICATION"
+  SPEVNT_Mexican_Unification_TEXT:0 "Men of the South! It is better to die on your feet than to live on your knees!\n\n§O-Emiliano Zapata-§!"
+  SPEVNT_Mexican_Unification_CLOSETEXT:0 "§OTIERRA Y LIBERTAD§!"
 
-  SPEVNT_New_Plague:0 "The New Plague"
-  SPEVNT_New_Plague_TEXT:0 "...the priest shall come to examine, if the plague has spread in the house, it is a malignant eruption in the house; it is unclean."
+  SPEVNT_New_Plague:0 "THE NEW PLAGUE"
+  SPEVNT_New_Plague_TEXT:0 "Ironically, it was not the flu that actually killed people but the way in which it weakened them in ways that allowed pneumonia or meningitis could set in.\n\n§O-Charles River Editors-§!"
+  SPEVNT_New_Plague_CLOSETEXT:0 "§OTHE WAR GOES MICROBIAL§!"
 
   SPEVNT_Siberia_United:0 "Siberia Is United"
   SPEVNT_Siberia_United_TEXT:0 "When he shall die, take him and cut him out in little stars, and he will make the face of heaven so fine that all the world will be in love with night and pay no worship to the garish sun."
 
-  SPEVNT_Chinese_Anarchy:0 "The Chinese Collapse"
-  SPEVNT_Chinese_Anarchy_TEXT:0 "By nature, men are nearly alike; by practice, they get to be wide apart.\nVictory is reserved for those who are willing to pay its price."
+  SPEVNT_Chinese_Anarchy:0 "THE CHINESE ANARCHY"
+  SPEVNT_Chinese_Anarchy_TEXT:0 "If imperialism is not banished from the country, China will perish as a nation. If China does not perish, then imperialism cannot remain.\n\n§O-Chiang Kai-shek-§!"
+  SPEVNT_Chinese_Anarchy_CLOSETEXT:0 "§OTHE EMPIRE UNITED, MUST DIVIDE§!"
 
-  SPEVNT_SCA_American_War:0 "The Exiles Return"
-  SPEVNT_SCA_American_War_TEXT:0 "From each according to his ability, to each according to his needs."
+  SPEVNT_SCA_American_War:0 "THE RECLAMATION WAR"
+  SPEVNT_SCA_American_War_TEXT:0 "There are only two things we should fight for. One is the defense of our homes and the other is the Bill of Rights. War for any other reason is simply a racket.\n\n§O-Smedley Butler-§!"
+  SPEVNT_SCA_American_War_CLOSETEXT:0 "§OTHE EXILES RETURN, RIFLES IN HAND§!"
