Lysenko is based

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -59,6 +59,8 @@
   RUS_alexander_guchkov_FM:0 "Alexander Guchkov"  
   RUS_pyotr_stolypin_IM:0 "Pyotr Stolypin"
   RUS_nicholas_nikolaevich_SIM:0 "Nicholas Nikolaevich"
+  RUS_nicholas_nikolaevich_cooler_SIM:0 "Grand Duke Nicholas Nikolaevich"
+  RUS_trofim_lysenko_SIM:0 "Trofim Lysenko"
 
 
   ##########################
@@ -98,6 +100,14 @@
   RUS_kirill_lysenkos_industrialization:0 "Lysenko's Industrialization"
   RUS_kirill_famine_prevention_agency:0 "Famine Prevention Agency"
   RUS_kirill_the_new_russian_heart:0 "The New Russian Heart"
+  RUS_kirill_noble_powers_expanded:0 "Noble Powers Expanded"
+  RUS_kirill_ministry_for_russian_science:0 "The Ministry for Russian Science"
+  RUS_kirill_project_chelovek_zver:0 "Project: Chelovek-Zver"
+  RUS_kirill_project_gonchaya:0 "Project: Gonchaya"
+  RUS_kirill_expand_project_gonchaya:0 "Expanded Project: Gonchaya"
+  RUS_kirill_animals_in_auxiliary_roles:0 "Animals in Auxiliary Roles"
+  RUS_kirill_animals_in_combat_roles:0 "Animals in Combat Roles"
+  RUS_kirill_project_chelovek_zver_finalised:0 "Project: Chelovek-Zver Finalised"
   ##########################
   # EVENTS
   ##########################
@@ -257,6 +267,16 @@
   RUS_kirill.6.t:0 "In The Depths of Russia's Laboratories"
   RUS_kirill.6.d:0 ""
   RUS_kirill.6.a:0 "Our new Tesla"
+  RUS_kirill.7.t:0 "Lysenko's Proposal"
+  RUS_kirill.7.d:0 ""
+  RUS_kirill.7.a:0 "Stay in your Laboratory"
+  RUS_kirill.7.b:0 "Perhaps it's time for a shake up"
+  RUS_kirill.8.t:0 "The Great Works of our Time"
+  RUS_kirill.8.d:0 ""
+  RUS_kirill.8.a:0 "Let's see what the Human body can do"
+  RUS_kirill.9.t:0 "Lysenko's Magnum Opus"
+  RUS_kirill.9.d:0 ""
+  RUS_kirill.9.a:0 "Let the New Slav Project begin"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -550,15 +570,7 @@
   PB_RUS_kirill_bears_as_hammers:0 "Bears as Hammers"
   PB_RUS_kirill_man_and_beast_are_one:0 "Man and Beast are One"
   PB_RUS_kirill_making_a_better_russian_man:0 "Making A Better Russian Man"
-  PB_RUS_kirill_splicing_genes:0 "Splicing Genes"
-  PB_RUS_kirill_new_experiments:0 "New Experiments"
-  PB_RUS_kirill_human_test_subjects:0 "Human Test Subjects"
-  PB_RUS_kirill_making_them_stronger:0 "Making Them Stronger"
-  PB_RUS_kirill_making_them_faster:0 "Making Them Faster"
-  PB_RUS_kirill_making_them_greater:0 "Making Them Greater"
-  PB_RUS_kirill_weve_gone_far_enough:0 "We've Gone Far Enough"
-  PB_RUS_kirill_shall_we_go_even_farther:0 "Shall We Go Even Farther?"
-  PB_RUS_kirill_slav_kind_redefined:0 "Slav-Kind Redefined"
+  PB_RUS_kirill_phase_one:0 "Commence Phase One"
   ########################## 
   # Decisions
   ##########################
@@ -588,6 +600,9 @@
   PB_RUS_alienate_them:0 "Alienate Them"
   PB_RUS_eradicate_the_traitors:0 "Eradicate The Traitors"
   PB_RUS_kirill_the_hidden_enemy_makes_moves:0 "The Hidden Enemy Spreads"
+
+  PB_RUS_kirill_special_project_novyy_slavyanin:0 "§YSpecial Project:§! Novyy Slavyanin 1721"
+  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa"
 
   
 
@@ -676,6 +691,12 @@
   RUS_kirill_intelligentsia_variable_low:0 "The §BIntelligentsia's influence§! is at a level it can be disbanded"
   RUS_kirill_hidden_enemy_variable_low:0 "The §OHidden Enemy's influence§! is at a level it can be disbanded"
   PB_RUS_kirill_unlocks_rest_of_focus_tree:0 "The Rest of the Focus Tree will be unlocked"
+  PB_RUS_kirill_expand_nikolaevichs_role_tt:0 "The §YSpecial Intrests Minister§! Nicholas Nikolaevich will grant §Gbigger bonuses§!"
+  PB_RUS_kirill_control_the_beasts_tt:0 "The National Spirit §YProject: Chelovek-Zver§! will be removed at the end of this tree"
+  RUS_kirill_lysenkos_project_open:0 "§YSpecial Project: Novyy Slavyanin 1721§! Will begin operation, you can see it in the Decision Tab."
+  PB_RUS_kirill_splicing_genes_tt:0 "Lysenko will discover new ways in which to §Ysplice Human genes and insert superior animal genes§!, §Gsome Decisions will give higher bonuses§!"
+  PB_RUS_kirill_new_experiments_tt:0 "The New Slav must not just by §Yphysically strong but also psychologically strong§!, §Ga new set of decisions will be unlocked in order to stabilize the New Slavs mental state§!"
+  PB_RUS_kirill_human_test_subjects_tt:0 "A larger set of test subjects will be needed in order fully realize the new Slav, a new set of decisions will be unlcoked that will cost "
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
