no matter where i go decision coding stalks me

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -570,7 +570,21 @@
   PB_RUS_kirill_bears_as_hammers:0 "Bears as Hammers"
   PB_RUS_kirill_man_and_beast_are_one:0 "Man and Beast are One"
   PB_RUS_kirill_making_a_better_russian_man:0 "Making A Better Russian Man"
-  PB_RUS_kirill_phase_one:0 "Commence Phase One"
+  PB_RUS_kirill_phase_one:0 "Phase One: Preparation"
+  PB_RUS_kirill_gather_the_subjects:0 "Gather the Subjects"
+  PB_RUS_kirill_construct_the_labs:0 "Construct the Labs"
+  PB_RUS_kirill_phase_two:0 "Phase Two: Constructing the Perfect Slav"
+  PB_RUS_kirill_splice_their_genes:0 "Splice Their Genes"
+  PB_RUS_kirill_new_experiments:0 "New Experiments"
+  PB_RUS_kirill_make_them_faster:0 "Make Them Faster"
+  PB_RUS_kirill_make_them_stronger:0 "Make Them Stronger"
+  PB_RUS_kirill_phase_three:0 "Phase Three: Final Adjustments"
+  PB_RUS_kirill_perserve_their_sanity:0 "Perserve Their Sanity"
+  PB_RUS_kirill_nothing_but_beasts:0 "Nothing but Beasts"
+  PB_RUS_kirill_go_even_further:0 "Go Even Further"
+  PB_RUS_kirill_weve_gone_far_enough:0 "We've Gone Far Enough"
+  PB_RUS_kirill_slav_Kind_redefined:0 "Slav-Kind Redefined"
+
   ########################## 
   # Decisions
   ##########################
@@ -578,7 +592,7 @@
   PB_RUS_kirill_new_russian_politics:0 "New Russian Politics"
   PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nControl of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC] ([?PB_RUS_kirill_house_influence])\nInfluence of §RThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC] ([?PB_RUS_kirill_mob_influence])\nInfluence of §BThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC] ([?PB_RUS_kirill_intelligentsia_influence])\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC] ([?PB_RUS_kirill_hidden_enemy_influence])"
   PB_RUS_kirill_tsardoms_house:0 "The Tsardom's §GHouse§!"
-  PB_RUS_kirill_solidify_the_houses_authority:0 "Solidify the §GHouses's§! Authority"
+  PB_RUS_kirill_soSlidify_the_houses_authority:0 "Solidify the §GHouses's§! Authority"
   PB_RUS_kirill_contact_the_navy:0 "Contact the Navy"
   PB_RUS_kirill_calm_the_purification:0 "Calm The Purification"
   PB_RUS_kirill_finalise_the_house:0 "Finalise §GThe House§!"
@@ -603,6 +617,17 @@
 
   PB_RUS_kirill_special_project_novyy_slavyanin:0 "§YSpecial Project:§! Novyy Slavyanin 1721"
   PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa"
+  PB_RUS_kirill_management_phases:0 "Project Management: Phases"
+  PB_RUS_kirill_commence_phase_one:0 "Commence Phase One"
+  PB_RUS_kirill_commence_phase_two:0 "Commence Phase Two"
+  PB_RUS_kirill_commence_phase_three:0 "Commence Phase Three"
+  PB_RUS_kirill_end_the_special_project:0 "End the Special Project"
+  PB_RUS_kirill_management_research:0 "Project Management: Research"
+  PB_RUS_kirill_subject_gathering_techniques:0 "Subject Gathering Techniques"
+  PB_RUS_kirill_long_term_subject_planning:0 "Long Term Subject Planning"
+  PB_RUS_kirill_create_the_ideal_laboratory:0 "Create the Ideal Laboratory"
+  PB_RUS_kirill_laboratory_breach_procedures:0 "Laboratory Breach Procedures"
+
 
   
 
@@ -694,9 +719,30 @@
   PB_RUS_kirill_expand_nikolaevichs_role_tt:0 "The §YSpecial Intrests Minister§! Nicholas Nikolaevich will grant §Gbigger bonuses§!"
   PB_RUS_kirill_control_the_beasts_tt:0 "The National Spirit §YProject: Chelovek-Zver§! will be removed at the end of this tree"
   RUS_kirill_lysenkos_project_open:0 "§YSpecial Project: Novyy Slavyanin 1721§! Will begin operation, you can see it in the Decision Tab."
-  PB_RUS_kirill_splicing_genes_tt:0 "Lysenko will discover new ways in which to §Ysplice Human genes and insert superior animal genes§!, §Gsome Decisions will give higher bonuses§!"
-  PB_RUS_kirill_new_experiments_tt:0 "The New Slav must not just by §Yphysically strong but also psychologically strong§!, §Ga new set of decisions will be unlocked in order to stabilize the New Slavs mental state§!"
-  PB_RUS_kirill_human_test_subjects_tt:0 "A larger set of test subjects will be needed in order fully realize the new Slav, a new set of decisions will be unlcoked that will cost "
+  PB_RUS_kirill_phase_one_tt:0 "In order to ensure the success of §YSpecial Project: Novyy Slavyanin 1721§! Lysenko is in need of §Gmore bodies and more laboratories§! to fully commit to the Project.\n\n§RRussia will supply§!"
+  PB_RUS_kirill_gather_the_subjects_tt:0 "Lysenko requires men in order for his experiments to succeed, §Gnew decsions will be unlocked§! if we §Rdo not gather enough subjects§! future developments will take §Rlonger or be stalled all together§!"
+  PB_RUS_kirill_construct_the_labs_tt:0 "Lysenko requires Laboratories in order to hold test subjects, §Gnew decsions will be unlocked§!, not building enough Laboratories will limit how many Test Subjects can be gathered §RAND§! effect the outcome of the Special Project"
+  PB_RUS_kirill_phase_two_tt:0 "§YSpecial Project: Novyy Slavyanin 1721§! will now move onto Phase Two and by using the newly built Laboratories and Test Subjects Lysenko will now begin building the §ONew Slav§!"
+  PB_RUS_kirill_splice_their_genes_tt:0 "Lysenko will begin splicing Animal Genes into the Human Genome, §Gnew decisions will be unlocked§! but this comes at the §Rrisk of subject breaches and a decrease in intelligence for the§! §ONew Slav§!"
+  PB_RUS_kirill_new_experiments_tt:0 "Lysenko will begin implementing new procedures to get the best outcome out of §YSpecial Project: Novyy Slavyanin 1721§!, §Gnew decsions will be unlocked§!"
+  PB_RUS_kirill_make_them_faster_tt:0 "Lysenko will focus on making the §ONew Slav§! faster then any other Human, §Gnew decsions will be unlocked§!. The strength of the §ONew Slav§! will §Rdecrease propositional§! to the increase of the speed of the §ONew Slav§!, decreasing their strength too much §Rincreases the chance of a failed outcome for the Project§!"
+  PB_RUS_kirill_make_them_stronger_tt:0 "Lysenko will focus on making the §ONew Slav§! stronger then any other Human, §Gnew decsions will be unlocked§!. The speed of the §ONew Slav§! will §Rdecrease propositional§! to the increase of the strength of the §ONew Slav§!, decreasing their speed too much §Rincreases the chance of a failed outcome for the Project§!"
+  PB_RUS_kirill_phase_three_tt:0 "§YSpecial Project: Novyy Slavyanin 1721§! is nearing its conclusion and Lysenko is commencing the final preparations for the §ONew Slav§!"
+  PB_RUS_kirill_perserve_their_sanity_tt:0 "Lysenko will be ordered to ensure the sanity of the §ONew Slav§!, §Gnew decisions will be unlocked§!, increasing the §ONew Slav's§! sanity will §Rdecrease strength/speed§!"
+  PB_RUS_kirill_nothing_but_beasts_tt:0 "The Tsar has decided the §ONew Slav§! does not need to be too smart"
+  PB_RUS_kirill_go_even_further_tt:0 "Lysenko will do a final series of experiments to expand the might of the §ONew Slav§!, §Rthis could be disastrous§!"
+  PB_RUS_kirill_weve_gone_far_enough_tt:0 "The Tsar will order an immediate halt to all experiments for the §ONew Slav§!, we've gone far enough"
+  PB_RUS_kirill_slav_Kind_redefined_tt:0 "Depending on our choices the end result of §YSpecial Project: Novyy Slavyanin 1721§! will differ"
+
+  PB_RUS_kirill_commence_phase_one_tt:0 "§GPhase One of Three will begin§!"
+  PB_RUS_kirill_commence_phase_two_tt:0 "§GPhase Two of Three will begin§!\n\n§RWarning: if you have not researched or done something it cannot be done in the next phase§!"
+  PB_RUS_kirill_commence_phase_three_tt:0 "§GPhase Three of Three will begin§!\n\n§RWarning: if you have not researched or done something it cannot be done in the next phase§!"
+  PB_RUS_kirill_end_the_special_project_tt:0 "§YSpecial Project: Novyy Slavyanin 1721§! will be brought to end, complete the final focus to discover the outcome\n\n§RWarning: ensure you have completed everything before continuing§!"
+  PB_RUS_kirill_not_researching_something:0 "We are not already Researching something"
+  PB_RUS_kirill_subject_gathering_techniques_tt:0 "We will gain the ability to gather Test Subjects"
+  PB_RUS_kirill_long_term_subject_planning_tt:0 "In future phases we will be given the chance to find some last minute Test Subjects"
+  PB_RUS_kirill_create_the_ideal_laboratory:0 "We will gain the ability to construct Laboratories"
+  PB_RUS_kirill_laboratory_breach_procedures_tt:0 "In the event of a Containment Breach Laboratories will have a higher chance of surviving them"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
