Windows 10 is a fucking travesty that deserves to die
TLDR: update broke my PC forcing me to reset it so now everything is a mess and i need to fix it all

fuck you windows 10

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -616,15 +616,19 @@
   PB_RUS_kirill_the_hidden_enemy_makes_moves:0 "The Hidden Enemy Spreads"
 
   PB_RUS_kirill_special_project_novyy_slavyanin:0 "§YSpecial Project:§! Novyy Slavyanin 1721"
-  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa"
+  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa[PB_RUS_kirill_logistics_info_loc][PB_RUS_kirill_test_subjects_loc][PB_RUS_kirill_laboratories_loc]"
   PB_RUS_kirill_management_phases:0 "Project Management: Phases"
   PB_RUS_kirill_commence_phase_one:0 "Commence Phase One"
   PB_RUS_kirill_commence_phase_two:0 "Commence Phase Two"
   PB_RUS_kirill_commence_phase_three:0 "Commence Phase Three"
   PB_RUS_kirill_end_the_special_project:0 "End the Special Project"
+  PB_RUS_kirill_management_subject:0 "Project Management: Subject Gathering"
+  PB_RUS_kirill_gather_the_willing:0 "Gather the Willing"
+
   PB_RUS_kirill_management_research:0 "Project Management: Research"
   PB_RUS_kirill_subject_gathering_techniques:0 "Subject Gathering Techniques"
   PB_RUS_kirill_long_term_subject_planning:0 "Long Term Subject Planning"
+  PB_RUS_kirill_enhanced_gathering_procedures:0 "Enchanced Gathering Procedures"
   PB_RUS_kirill_create_the_ideal_laboratory:0 "Create the Ideal Laboratory"
   PB_RUS_kirill_laboratory_breach_procedures:0 "Laboratory Breach Procedures"
 
@@ -741,7 +745,8 @@
   PB_RUS_kirill_not_researching_something:0 "We are not already Researching something"
   PB_RUS_kirill_subject_gathering_techniques_tt:0 "We will gain the ability to gather Test Subjects"
   PB_RUS_kirill_long_term_subject_planning_tt:0 "In future phases we will be given the chance to find some last minute Test Subjects"
-  PB_RUS_kirill_create_the_ideal_laboratory:0 "We will gain the ability to construct Laboratories"
+  PB_RUS_kirill_enhanced_gathering_procedures_tt:0 "Test Subject gathering decisions will have greater yields"
+  PB_RUS_kirill_create_the_ideal_laboratory_tt:0 "We will gain the ability to construct Laboratories"
   PB_RUS_kirill_laboratory_breach_procedures_tt:0 "In the event of a Containment Breach Laboratories will have a higher chance of surviving them"
   ##########################
   # Party Loyalty Mechanic n shit
@@ -787,4 +792,10 @@
   PB_RUS_kirill_hidden_enemy_insignificant_power:0 "§RLurking in the Shadows§!"
   PB_RUS_kirill_hidden_enemy_destroyable:0 "§GReady to be Eradicated§!"
   PB_RUS_kirill_hidden_enemy_eradicated:0 "§GERADICATED§!"
+
+  PB_RUS_kirill_logistics_info_loc_yes:0 "\n\n§OLogistics Information:§!"
+  PB_RUS_kirill_test_subjects_loc_yes:0 "\n\n§LTest Subjects:§! §G[?PB_RUS_kirill_test_subjects]§! out of a maximum §R[?PB_RUS_kirill_test_subjects_max]§!"
+  PB_RUS_kirill_laboratories_loc_yes:0 "\nWe have §G[?PB_RUS_kirill_laboratories]§! §LLaboratories§!"
+
+  
   
