--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -222,7 +222,7 @@
   PB_ENG_1937_Elections_NPP:0 "Britain Lives, and Marches on"
   PB_ENG_1937_Elections_NPP_desc:0 "Britain has voted the Nationalist People's Party in the 1937 election. With war on the horizon and the socialist menace abroad the British public have decided to put us nationalists to guard and defend their nation, their home and the British Empire. With this public support we shall make sure that the Pax Britannica shall last another three hundred years. Britain lives and Marches on!"
   PB_ENG_1937_Target_Social_Dissidents:0 "Target the Anti-Socials"
-  PB_ENG_1937_Target_Social_Dissidents_disc:0 "We live in a society; therefore it is expected that every Englishman shall do his duty and contribute to said society for the greater good to keep Britannia the most cultural and patriotic nations in the world. However there are a bunch of muppets on this land who refuse such a sacred calling from pacifists to teenagers. To deal with this we shall target these anti-socials to fall in line with any means necessary."
+  PB_ENG_1937_Target_Social_Dissidents_desc:0 "We live in a society; therefore it is expected that every Englishman shall do his duty and contribute to said society for the greater good to keep Britannia the most cultural and patriotic nations in the world. However there are a bunch of muppets on this land who refuse such a sacred calling from pacifists to teenagers. To deal with this we shall target these anti-socials to fall in line with any means necessary."
   PB_ENG_1937_Union_Management:0 "Move to Control the Unions"
   PB_ENG_1937_Union_Management_desc:0 "The British Unions are a powerful entity which were founded to defend the working class man; a noble starting point. However the socialists have rotted the British unions into a festering abomination of revolutionary thoughts and anti-British agenda. To amend this we shall move to control the unions by unifying some and replacing others to create unions who are loyal to us and therefore Britain as a whole."
   PB_ENG_1937_Defend_the_West:0 "The Defender of Western Civilization"
@@ -937,8 +937,8 @@
   britain.39.a:0 "More burden to the White Man"
 
   britain.40.t:0 "Anti-British Riots in Freetown"
-  britain.40.d:0 ""
-  britain.40.a:0 "Have the local garrison restore order."
+  britain.40.d:0 "Lieutenant Colonel Lucas sat at his desk in some outpost ten miles away from Freetown. He was a man built for combat, joining the King's West African Mounted Rifles just after the Great war being too young to enlist for that conflict and still enlisting two years to serve his country in the Dark Continent.\n\nNow after nearly a decade and a half of service to his crown he ended up rising to a place he despised the most; bureacracy. The Colonel was ordered to manage the garrisons and patrol movements near Freetown- an extraordinary boring job which was slowly degrading his martial prowess through the painful years of military bureacracy.\n\nAs he was about to stretch a young soldier-no older then 18, barged into his office screaming that the 'savages have revolted.'\n\nThe old soldier quickly calmed down the boy and laughed confusing the young squadie who was desperately trying to ask for orders. Finally a worthy challenge for the ageing officer and possibly an opportunity to get out this godforsaken hell hole if he plays his cards right. The Colonel stood up and told the young soldier the motto of his regiment.\n\n'Blood, Guts and Glory'."
+  britain.40.a:0 Fetch me my rifle boy and call the riders for we have a fight at last."
 
   britain.41.t:0 "Anti-British Riots in Freetown"
   britain.41.d:0 ""
