mhmhmhmh science variables

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -592,7 +592,7 @@
   PB_RUS_kirill_new_russian_politics:0 "New Russian Politics"
   PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nControl of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC] ([?PB_RUS_kirill_house_influence])\nInfluence of §RThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC] ([?PB_RUS_kirill_mob_influence])\nInfluence of §BThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC] ([?PB_RUS_kirill_intelligentsia_influence])\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC] ([?PB_RUS_kirill_hidden_enemy_influence])"
   PB_RUS_kirill_tsardoms_house:0 "The Tsardom's §GHouse§!"
-  PB_RUS_kirill_soSlidify_the_houses_authority:0 "Solidify the §GHouses's§! Authority"
+  PB_RUS_kirill_solidify_the_houses_authority:0 "Solidify the §GHouses's§! Authority"
   PB_RUS_kirill_contact_the_navy:0 "Contact the Navy"
   PB_RUS_kirill_calm_the_purification:0 "Calm The Purification"
   PB_RUS_kirill_finalise_the_house:0 "Finalise §GThe House§!"
@@ -616,14 +616,22 @@
   PB_RUS_kirill_the_hidden_enemy_makes_moves:0 "The Hidden Enemy Spreads"
 
   PB_RUS_kirill_special_project_novyy_slavyanin:0 "§YSpecial Project:§! Novyy Slavyanin 1721"
-  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa[PB_RUS_kirill_logistics_info_loc][PB_RUS_kirill_test_subjects_loc][PB_RUS_kirill_laboratories_loc]"
+  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa[PB_RUS_kirill_logistics_info_loc][PB_RUS_kirill_test_subjects_loc][PB_RUS_kirill_laboratories_loc][PB_RUS_kirill_new_slav_stats_loc][PB_RUS_kirill_new_slav_number_stats_loc]"
   PB_RUS_kirill_management_phases:0 "Project Management: Phases"
   PB_RUS_kirill_commence_phase_one:0 "Commence Phase One"
   PB_RUS_kirill_commence_phase_two:0 "Commence Phase Two"
   PB_RUS_kirill_commence_phase_three:0 "Commence Phase Three"
+  PB_RUS_kirill_emergency_test_subject_gathering:0 "Emergency Test Subject Gathering"
   PB_RUS_kirill_end_the_special_project:0 "End the Special Project"
+
   PB_RUS_kirill_management_subject:0 "Project Management: Subject Gathering"
   PB_RUS_kirill_gather_the_willing:0 "Gather the Willing"
+  PB_RUS_kirill_appropriate_prison_Labour:0 "Appropiate Prison Labour"
+  PB_RUS_kirill_gather_strong_soldiers:0 "Gather Strong Soldiers"
+  PB_RUS_kirill_mass_gathering_campaigns:0 "Mass Gathering Campaigns"
+
+  PB_RUS_kirill_management_laboratories:0 "Project Management: Laboratory Building"
+  PB_RUS_kirill_construct_laboratories:0 "Construct Laboratories"
 
   PB_RUS_kirill_management_research:0 "Project Management: Research"
   PB_RUS_kirill_subject_gathering_techniques:0 "Subject Gathering Techniques"
@@ -631,6 +639,10 @@
   PB_RUS_kirill_enhanced_gathering_procedures:0 "Enchanced Gathering Procedures"
   PB_RUS_kirill_create_the_ideal_laboratory:0 "Create the Ideal Laboratory"
   PB_RUS_kirill_laboratory_breach_procedures:0 "Laboratory Breach Procedures"
+  #PHASE 2
+  PB_RUS_kirill_understanding_the_new_slavs_body:0 "Understanding the New Slav's Body"
+  PB_RUS_kirill_research_new_experiments:0 "Research New Experiments"
+  PB_RUS_kirill_research_gene_splicing:0 "Research Gene Splicing"
 
 
   
@@ -748,6 +760,65 @@
   PB_RUS_kirill_enhanced_gathering_procedures_tt:0 "Test Subject gathering decisions will have greater yields"
   PB_RUS_kirill_create_the_ideal_laboratory_tt:0 "We will gain the ability to construct Laboratories"
   PB_RUS_kirill_laboratory_breach_procedures_tt:0 "In the event of a Containment Breach Laboratories will have a higher chance of surviving them"
+  PB_RUS_kirill_not_gathering_subects:0 "We are §Rnot§! already gathering Test Subjects"
+  PB_RUS_kirill_genetic_mutation_tt:0 "§RThere is an increased risk of Genetic Mutation§!"
+  PB_RUS_kirill_subject_checker:0 "We have less then or equal to §Y[?PB_RUS_kirill_test_subjects_max]§! Test Subjects"
+  PB_RUS_kirill_lab_checker:0 "We have less then or equal to §YFive§! Laboratories"
+  PB_RUS_kirill_construct_laboratories_tt:0 "Five Hundred new Test Subjects will be able to be recruited"
+  PB_RUS_kirill_understanding_the_new_slavs_body_tt:0 "The 'Stats' of the New Slav will now be displayed in the Decision Menu, §Gnew research will be unlocked§!"
+  PB_RUS_kirill_research_new_experiments_tt:0 "Experiments will become avaliable in order to increase the power of the New Slav, this proccess is slow and can lead to possible failure\n\n§RThis cannot be researched alongside§! §YGene Splicing§!"
+  PB_RUS_kirill_research_gene_splicing_tt:0 "We will begin inserting animal genes into the New Slav's Genome, this can lead to insanity\n\n§RThis cannot be researched alongside§! §YNew Experiments§!"
+
+  PB_RUS_kirill_test_subjects_plus10_tt:0 "§YTen Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_plus25_tt:0 "§YTwenty Five Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_plus50_tt:0 "§YFifty Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_plus75_tt:0 "§YSeventy Five Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_plus100_tt:0 "§YOne Hundred Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_plus200_tt:0 "§YTwo Hundred Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_plus500_tt:0 "§YFive Hundred Test Subjects§! will be §Gadded§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus10_tt:0 "§YTen Test Subjects§! will be §Rdecreased§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus25_tt:0 "§YTwenty Five Test Subjects§! will be §Rdecreased§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus50_tt:0 "§YFifty Test Subjects§! will be §Rdecreased§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus75_tt:0 "§YSeventy Five Test Subjects§! will be §Rdecreased§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus100_tt:0 "§YOne Hundred Test Subjects§! will be §Rdecreased§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus200_tt:0 "§YTwo Hundred Test Subjects§! will be §Rdecreased§! to the Experiment"
+
+  PB_RUS_kirill_new_slav_strength_plus0.1_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_strength_plus0.15_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_strength_plus0.2_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_strength_plus0.25_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.1_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.15_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.2_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.25_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.1_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.15_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.2_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.25_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.1_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.15_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.2_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.25_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.1_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.15_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.2_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.25_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.1_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.15_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.2_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.25_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.1_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.15_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.2_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.25_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.1_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.15_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.2_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.25_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
+
+
+
+
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
@@ -794,8 +865,10 @@
   PB_RUS_kirill_hidden_enemy_eradicated:0 "§GERADICATED§!"
 
   PB_RUS_kirill_logistics_info_loc_yes:0 "\n\n§OLogistics Information:§!"
-  PB_RUS_kirill_test_subjects_loc_yes:0 "\n\n§LTest Subjects:§! §G[?PB_RUS_kirill_test_subjects]§! out of a maximum §R[?PB_RUS_kirill_test_subjects_max]§!"
+  PB_RUS_kirill_test_subjects_loc_yes:0 "\n§LTest Subjects:§! §G[?PB_RUS_kirill_test_subjects]§! out of a maximum §R[?PB_RUS_kirill_test_subjects_max]§!"
   PB_RUS_kirill_laboratories_loc_yes:0 "\nWe have §G[?PB_RUS_kirill_laboratories]§! §LLaboratories§!"
+  PB_RUS_kirill_new_slav_stats_loc_yes:0 "\n\n§gUnderstanding the New Slav:§!"
+  PB_RUS_kirill_new_slav_number_stats_loc_yes:0 "\nStrength: [?PB_RUS_kirill_new_slav_strength]\nDefence: [?PB_RUS_kirill_new_slav_defence]\pSpeed: [?PB_RUS_kirill_new_slav_speed]\nAdaptability: [?PB_RUS_kirill_new_slav_adaptability]"
 
   
   
